@@ -34,8 +34,32 @@
   </issueManagement>
 
   <properties>
-    <jacoco.min.linecoverage>0.01</jacoco.min.linecoverage>
-    <jacoco.min.branchcoverage>0.01</jacoco.min.branchcoverage>
+    <jacoco.min.linecoverage>0.39</jacoco.min.linecoverage>
+    <jacoco.min.branchcoverage>0.16</jacoco.min.branchcoverage>
+    <javaModulesSurefireArgLine>
+      --add-modules com.azure.cosmos
+      --add-modules com.azure.messaging.eventhubs
+      --add-modules com.azure.messaging.servicebus
+      --add-modules com.azure.security.keyvault.certificates
+      --add-modules com.azure.security.keyvault.secrets
+      --add-modules com.azure.storage.blob
+      --add-modules com.azure.storage.file.share
+      --add-modules com.azure.storage.queue
+      --add-modules com.azure.storage.internal.avro
+      --add-modules com.azure.data.appconfiguration
+      --add-opens com.azure.spring.service/com.azure.spring.service=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.core=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.appconfiguration=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.cosmos=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.credential=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.eventhubs=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.servicebus=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.blob=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.fileshare=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.storage.queue=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.keyvault.secret=ALL-UNNAMED
+      --add-opens com.azure.spring.service/com.azure.spring.service.keyvault.certificates=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -49,7 +73,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-cosmos</artifactId>
-      <version>4.21.1</version> <!-- {x-version-update;com.azure:azure-cosmos;dependency} -->
+      <version>4.23.0</version> <!-- {x-version-update;com.azure:azure-cosmos;dependency} -->
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -61,7 +85,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-messaging-servicebus</artifactId>
-      <version>7.5.0</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;dependency} -->
+      <version>7.5.1</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;dependency} -->
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -104,19 +128,19 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>3.12.4</version><!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
+      <version>4.0.0</version><!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.7.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter;external_dependency} -->
+      <version>5.8.1</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.3.9</version> <!-- {x-version-update;org.springframework:spring-test;external_dependency} -->
+      <version>5.3.13</version> <!-- {x-version-update;org.springframework:spring-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
 
